--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,19 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: black;
-  background-color: #f4e4c2;
+  color: white;
+  background-color: #1c1b19;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  height: 50%;
+  background-image: url(../public/img/bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 body {
@@ -69,6 +75,9 @@ textarea {
   border: none;
   outline: none;
   font-family: inherit;
+  border-radius: 8px;
+  height: 30px;
+  padding-left: 10px;
 }
 
 /* @font-face {
@@ -77,5 +86,18 @@ textarea {
 } */
 
 label {
-  font-size: 25px;
+  font-size: 16px;
+}
+
+.visuallyHidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
