--- a/src/components/SignUpForm/SignUpForm.module.css
+++ b/src/components/SignUpForm/SignUpForm.module.css
@@ -5,3 +5,30 @@
   display: flex;
   flex-direction: column;
 }
+
+.btn{
+  font-weight: bold;
+  margin: 15px 0;;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  height: 30px;
+  border: none;
+  border-radius: 8px;
+
+  &:hover{
+    color: white;
+    background-color: transparent;
+    border: 1px solid white;
+  }
+}
+
+.text{
+  font-size: 15px;
+}
+
+.link{
+  transform: scale(1.2);
+  font-size: 20px;
+}
