--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -4,23 +4,25 @@
   padding: 30px;
   width: 100%;
   height: 100%;
-  margin-top: 130px;
+  margin-top: 100px;
 
   @media screen and (min-width: 375px) {
+    margin-top: 120px;
   }
-
+  
   @media screen and (min-width: 768px) {
     width: 400px;
-    height: 300px;
+    margin-top: 130px;
   }
 
   @media screen and (min-width: 1024px) {
     width: 750px;
-    height: 450px;
+    margin-top: 60px;
   }
 }
 
 .title {
+  font-family: 'Impact', sans-serif;
   font-size: 18px;
   margin-bottom: 15px;
   @media screen and (min-width: 375px) {
@@ -46,6 +48,6 @@
 
   @media screen and (min-width: 1024px) {
     font-size: 30px;
-    margin-bottom: 70px;
+    margin-bottom: 50px;
   }
 }
