--- a/src/pages/SignUpPage/SignUpPage.module.css
+++ b/src/pages/SignUpPage/SignUpPage.module.css
@@ -4,18 +4,28 @@
   padding: 30px;
   width: 100%;
   height: 100%;
-  margin-top: 130px;
+  margin-top: 100px;
 
   @media screen and (min-width: 375px) {
+    margin-top: 120px;
   }
 
   @media screen and (min-width: 768px) {
     width: 400px;
-    height: 300px;
+    margin-top: 130px;
   }
 
   @media screen and (min-width: 1024px) {
     width: 750px;
-    height: 450px;
+    margin-top: 60px;
   }
 }
+
+.title{
+  font-family: 'Impact', sans-serif;
+}
+
+.title, .description{
+  margin-bottom: 15px;
+}
+
