--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -2,37 +2,40 @@
   display: flex;
   align-items: center;
   gap: 18px;
-  font-size: 25px;
+  font-size: 16px;
 }
 
 .wrapper {
   display: flex;
-  flex-direction: column;
   gap: 15px;
-  align-items: center;
-  justify-content: center;
-  background-color: #d2bf87;
-  border: 1px solid #625332;
+  border: 3px solid white;
   border-radius: 8px;
-  padding: 15px;
+  padding: 8px;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
 
   @media screen and (min-width: 768px) {
     flex-direction: row;
-    justify-content: space-between;
+
+    width: calc((100% - 10px) / 2);
   }
 }
 
 .delBtn {
-  border-radius: 13px;
-  border: 1px solid #353b3b;
-  color: white;
-  padding: 5px;
-  font-size: 20px;
-  height: 50px;
-  width: 150px;
-  background-color: #67705f;
+  font-weight: bold;
+  margin: 15px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 30px;
+  border: none;
+  border-radius: 8px;
 
   &:hover {
-    background-color: #353b3b;
+    color: white;
+    background-color: transparent;
+    border: 1px solid white;
   }
 }
