--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,34 +1,54 @@
-.form_grid {
-  grid-area: form;
-  border: 2px solid #625332;
-  border-radius: 12px;
-  padding: 20px;
-}
+.wrapper {
+  border: 3px solid white;
+  border-radius: 18px;
+  padding: 30px;
+  width: 100%;
+  height: 100%;
+  margin-top: 80px;
+  background-color: rgba(167, 102, 50, 0.1);
 
+  @media screen and (min-width: 375px) {
+    margin-top: 120px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 400px;
+    margin-top: 130px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    width: 750px;
+    margin-top: 60px;
+  }
+}
 .form {
   display: flex;
   flex-direction: column;
 }
 
 .btn {
-  border-radius: 13px;
-  margin-top: 25px;
-  border: 1px solid #353b3b;
-  color: white;
-  padding: 5px;
-  font-size: 20px;
-  height: 50px;
-  background-color: #67705f;
+  font-weight: bold;
+  margin: 15px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  height: 30px;
+  border: none;
+  border-radius: 8px;
 
   &:hover {
-    background-color: #353b3b;
+    color: white;
+    background-color: transparent;
+    border: 1px solid white;
   }
 }
 
-.input {
-  border-radius: 13px;
-  padding: 5px;
-  height: 35px;
-  width: 100%;
-  margin-bottom: 15px;
+.text {
+  font-size: 15px;
+}
+
+.link {
+  transform: scale(1.2);
+  font-size: 20px;
 }
