--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,9 +1,11 @@
 .list {
-  grid-area: list;
-  border: 2px solid #625332;
-  border-radius: 12px;
-  padding: 20px;
   display: flex;
-  flex-direction: column;
-  gap: 15px;
+  flex-wrap: wrap;
+  gap: 10px;
+  border: 3px solid white;
+  border-radius: 18px;
+  padding: 10px;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(167, 102, 50, 0.1);
 }
