--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -4,12 +4,12 @@
   padding: 30px;
   width: 100%;
   height: 100%;
-  margin-top: 100px;
-
+  margin-top: 80px;
+  background-color: rgba(167, 102, 50, 0.1);
   @media screen and (min-width: 375px) {
     margin-top: 120px;
   }
-  
+
   @media screen and (min-width: 768px) {
     width: 400px;
     margin-top: 130px;
@@ -22,7 +22,7 @@
 }
 
 .title {
-  font-family: 'Impact', sans-serif;
+  font-family: "Impact", sans-serif;
   font-size: 18px;
   margin-bottom: 15px;
   @media screen and (min-width: 375px) {
