--- a/src/pages/LogInPage/LoginPage.module.css
+++ b/src/pages/LogInPage/LoginPage.module.css
@@ -1,33 +1,32 @@
 .wrapper {
-    border: 3px solid white;
-    border-radius: 18px;
-    padding: 30px;
-    width: 100%;
-    height: 100%;
-    margin-top: 100px;
+  border: 3px solid white;
+  border-radius: 18px;
+  padding: 30px;
+  width: 100%;
+  height: 100%;
+  margin-top: 80px;
+  background-color: rgba(167, 102, 50, 0.1);
 
-    @media screen and (min-width: 375px) {
-        margin-top: 120px;
-    }
+  @media screen and (min-width: 375px) {
+    margin-top: 120px;
+  }
 
-    @media screen and (min-width: 768px) {
-        width: 400px;
-        height: 300px;
-        margin-top: 130px;
-    }
+  @media screen and (min-width: 768px) {
+    width: 400px;
+    margin-top: 130px;
+  }
 
-    @media screen and (min-width: 1024px) {
-        width: 750px;
-        height: 400px;
-        margin-top: 60px;
-    }
+  @media screen and (min-width: 1024px) {
+    width: 750px;
+    margin-top: 60px;
+  }
 }
 
 .title {
-    font-family: 'Impact', sans-serif;
+  font-family: "Impact", sans-serif;
 }
 
 .title,
 .description {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
