--- a/src/pages/SignUpPage/SignUpPage.module.css
+++ b/src/pages/SignUpPage/SignUpPage.module.css
@@ -4,7 +4,8 @@
   padding: 30px;
   width: 100%;
   height: 100%;
-  margin-top: 100px;
+  margin-top: 80px;
+  background-color: rgba(167, 102, 50, 0.1);
 
   @media screen and (min-width: 375px) {
     margin-top: 120px;
@@ -21,11 +22,11 @@
   }
 }
 
-.title{
-  font-family: 'Impact', sans-serif;
+.title {
+  font-family: "Impact", sans-serif;
 }
 
-.title, .description{
+.title,
+.description {
   margin-bottom: 15px;
 }
-
